--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
         </div>
     </div>
 
+    <div id="footer">
+        <h2 class="text-center">Sticky Footer</h2>
+    </div>
+
     <!--Modals-->
     <!--Add User Modal-->
     <div class="modal fade" id="addUserModal" tabindex="-1" aria-labelledby="addUserModal" aria-hidden="true">
